--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Clippy
       run: cargo clippy --all-features --workspace --tests --examples
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --lib
     - name: Format
       run: cargo fmt --check --all
